add jetty runtime for deeloper test

--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.6</maven.compiler.source>
         <maven.compiler.target>${maven.compiler.source}</maven.compiler.target>
+        <dependency.jetty.version>9.0.0.v20130308</dependency.jetty.version>
     </properties>
 
     <build>
@@ -69,6 +70,14 @@
                         </goals>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.eclipse.jetty</groupId>
+                <artifactId>jetty-maven-plugin</artifactId>
+                <version>${dependency.jetty.version}</version>
+                <configuration>
+                    <scanIntervalSeconds>10</scanIntervalSeconds>
+                </configuration>
             </plugin>
         </plugins>
         <pluginManagement>
