--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,7 @@
         <maven.compiler.target>${maven.compiler.source}</maven.compiler.target>
         <dependency.spring.version>3.2.2.RELEASE</dependency.spring.version>
         <dependency.json.version>20080701</dependency.json.version>
+        <dependency.codec.version>1.7</dependency.codec.version>
         <dependency.jetty.version>9.0.0.v20130308</dependency.jetty.version>
     </properties>
 
@@ -62,6 +63,11 @@
             <groupId>org.json</groupId>
             <artifactId>json</artifactId>
             <version>${dependency.json.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>${dependency.codec.version}</version>
         </dependency>
     </dependencies>
 
