--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,8 @@
         <dependency.spring.version>3.2.2.RELEASE</dependency.spring.version>
         <dependency.json.version>20080701</dependency.json.version>
         <dependency.codec.version>1.7</dependency.codec.version>
+        <dependency.commons-lang.version>2.6</dependency.commons-lang.version>
+        <dependency.dbutils.version>1.5</dependency.dbutils.version>
         <dependency.jetty.version>9.0.0.v20130308</dependency.jetty.version>
     </properties>
 
@@ -70,6 +72,16 @@
             <version>${dependency.codec.version}</version>
         </dependency>
         <dependency>
+            <groupId>commons-lang</groupId>
+            <artifactId>commons-lang</artifactId>
+            <version>${dependency.commons-lang.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-dbutils</groupId>
+            <artifactId>commons-dbutils</artifactId>
+            <version>${dependency.dbutils.version}</version>
+        </dependency>
+        <dependency>
             <groupId>net.sf.mime-util</groupId>
             <artifactId>mime-util</artifactId>
             <version>1.2</version>
@@ -78,6 +90,11 @@
             <groupId>commons-fileupload</groupId>
             <artifactId>commons-fileupload</artifactId>
             <version>1.3</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hsqldb</groupId>
+            <artifactId>hsqldb</artifactId>
+            <version>2.2.9</version>
         </dependency>
     </dependencies>
 
